# nengo

cpp/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  GETTING_STARTED.md  IMPROVEMENTS.md  README.md  build.sh
cpp/examples/: CMakeLists.txt  communication_channel.cpp  ensemble_basics.cpp  networks_example.cpp  simple_example.cpp  synapse_example.cpp
cpp/include/nengo/: base.hpp  cache.hpp  config.hpp  connection.hpp  dists.hpp  ensemble.hpp  exceptions.hpp  learning_rules.hpp  nengo.hpp  network.hpp  networks.hpp  neurons.hpp  node.hpp  params.hpp  presets.hpp  probe.hpp  processes.hpp  rc.hpp  simulator.hpp  solvers.hpp  synapses.hpp  transforms.hpp  version.hpp
cpp/src/: base.cpp  cache.cpp  config.cpp  connection.cpp  dists.cpp  ensemble.cpp  exceptions.cpp  learning_rules.cpp  network.cpp  networks.cpp  neurons.cpp  node.cpp  params.cpp  presets.cpp  probe.cpp  processes.cpp  rc.cpp  simulator.cpp  solvers.cpp  synapses.cpp  transforms.cpp  version.cpp
cpp/tests/: CMakeLists.txt  test_basic.cpp  test_network.cpp  test_networks.cpp  test_synapses.cpp
